<resources>
    <string name="app_name">YallaGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TripPlanner">Trip Planner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="donot_hava_account">Do not have already account ?</string>
    <string name="signup">Sign up</string>
    <string name="email_address">email address</string>
    <string name="or_login_with">OR login with</string>
    <string name="login_with_google">Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="trip_details">Trip Details</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="date">Date</string>
    <string name="status">Status Trip</string>
    <string name="note">Note</string>

    <string name="confirm_password">Confirm Password</string>

    <string name="or_sign_up_with">OR sign up with</string>
    <string name="sign_up_with_google">Sign Up with Google</string>

    <string name="tripName">Name</string>
    <string name="tripDate">Date</string>
    <string name="start_trip">Start</string>
    <string name="btn_start">Start</string>
    <string name="line">_______________</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="rponded_dir">Rounded Direction</string>
    <string name="trip_add">Add Trip</string>
    <string name="trips">Trips</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign Up</string>
    <string name="ic_password">ic_password</string>
    <string name="todo">ToDo</string>
    <string name="start">Start</string>
    <string name="menu">menu</string>
    <string name="mytrips">Trips</string>
    <string name="search_trip">Search Trip</string>
    <string name="tripTime">Time</string>
    <string name="rounded_direction">Round Trip</string>
    <string name="create_now">Create</string>
    <string name="cancel">cancel</string>

    <string name="access_token">pk.eyJ1IjoiYWJkdWxyYWhtYW5taHNuIiwiYSI6ImNranE4YmV6aDBicHQycnFoMTlwbmpmankifQ.l24EiCVSoJwgYK6Mo1c0MA</string>
    <string name="no_more">No More</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="edit">Edit</string>
    <string name="note_add">Add Note</string>
    <string name="body">body your note</string>
    <string name="back">back</string>
    <string name="enter_text">Enter text</string>
    <string name="reset">reset</string>
    <string name="add">add</string>
    <string name="text_empty">Text is empty</string>
    <string name="name_required">name is required</string>
    <string name="date_expired">Date is expired</string>
    <string name="time_expired">Time is expired</string>
    <string name="time_required">Time is required</string>
    <string name="date_required">Date is required</string>
    <string name="endPoint_required">EndPoint is required</string>
    <string name="startPoint_required">StartPoint is required</string>
    <string name="add_trip">Add trip</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="account_balance">Account Balance</string>
    <string name="balance_currency">$</string>
    <string name="balance_amount">524.99</string>
    <string name="or">OR</string>
    <string name="login_social">login using social media</string>
    <string name="todoo">TODO</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="sync">Sync</string>
    <string name="setting">Setting</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="loading">Loading....</string>
</resources>