<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:icon="@drawable/ic_home_outline_grey600_24dp"
            android:id="@+id/search"
            />
        <item
            android:title="@string/history"
            android:icon="@drawable/ic_history"
            android:id="@+id/basket"
            />

        <item
            android:title="@string/sync"
            android:icon="@drawable/ic_sync"
            android:id="@+id/promo_code"
            />
    </group>
    <item android:title=""
        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:title="@string/setting"
                    android:icon="@drawable/ic_settings"
                    android:id="@+id/setting"
                    />
                <item
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout_grey600_24dp"
                    android:id="@+id/support"
                    />
            </group>
        </menu>
    </item>
</menu>